--- a/views/rate.ejs
+++ b/views/rate.ejs
@@ -26,6 +26,7 @@
                 <div class="col-md-6">
                     <p><strong>Customer Name:</strong> <%= rating.customer_name %></p>
                     <p><strong>Service:</strong> <%= rating.service_name %></p>
+                    <p><strong>Serviced by:</strong> <%= rating.service_by %></p>
                 </div>
             </div>
         </div>
