--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -73,6 +73,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="/dashboard">Ratings Dashboard</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/config">Configuration</a>
+                </li>
             </ul>
         </nav>
 
